--- a/pom.xml
+++ b/pom.xml
@@ -40,13 +40,13 @@
 		<dependency>
 			<groupId>org.jpmml</groupId>
 			<artifactId>pmml-evaluator</artifactId>
-			<version>1.1-SNAPSHOT</version>
+			<version>1.1.16</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jpmml</groupId>
 			<artifactId>pmml-evaluator</artifactId>
-			<version>1.1-SNAPSHOT</version>
+			<version>1.1.16</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
