--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.jpmml</groupId>
-	<artifactId>pmml-converter</artifactId>
+	<artifactId>jpmml-converter</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
 	<name>JPMML-Converter</name>
-	<description>Java library for working with PMML class model objects</description>
+	<description>Java library for authoring PMML</description>
 	<url>http://www.jpmml.org</url>
 
 	<licenses>
