--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,14 @@
 			<version>1.2.7</version>
 		</dependency>
 
+		<!-- Mirrors the one specified by the org.jpmml:pmml-model dependency -->
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>2.2.11</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
