--- a/pom.xml
+++ b/pom.xml
@@ -51,16 +51,8 @@
 
 		<dependency>
 			<groupId>org.jpmml</groupId>
-			<artifactId>pmml-model</artifactId>
-			<version>1.2.7</version>
-		</dependency>
-
-		<!-- Mirrors the one specified by the org.jpmml:pmml-model dependency -->
-		<dependency>
-			<groupId>org.glassfish.jaxb</groupId>
-			<artifactId>jaxb-runtime</artifactId>
-			<version>2.2.11</version>
-			<scope>provided</scope>
+			<artifactId>pmml-model-metro</artifactId>
+			<version>1.2.10</version>
 		</dependency>
 
 		<dependency>
