Updated Guava dependency

--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>19.0</version>
+			<version>[13.0, 19.0]</version>
 		</dependency>
 
 		<dependency>
