Added method PMMLMapper#encodeHeader()

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
 	<name>JPMML-Converter</name>
 	<description>Java library for authoring PMML</description>
-	<url>http://www.jpmml.org</url>
+	<url>https://github.com/jpmml/jpmml-converter</url>
 
 	<licenses>
 		<license>
@@ -95,6 +95,18 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.0.2</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.5.3</version>
 				<configuration>
@@ -105,7 +117,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>3.0.0</version>
+				<version>3.0.1</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
