--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>[21.0,)</version>
+			<version>21.0</version>
 			<exclusions>
 				<exclusion>
 					<groupId>*</groupId>
