Updated Guava dependency
Switched from an open-ended version range [21.0, ) to a fixed
version 21.0 (the earliest JDK 1.8 compatible version) to stop
the downstream JPMML conversion libraries from "fluctuating"
between JRE and Android variants (eg. 28.2-jre vs. 28.2-android)
at different times.

See commit 7d1588178d

--- a/pom.xml
+++ b/pom.xml
@@ -46,13 +46,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>[21.0,)</version>
-			<exclusions>
-				<exclusion>
-					<groupId>*</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-			</exclusions>
+			<version>21.0</version>
 		</dependency>
 
 		<dependency>
