Updated JPMML-Evaluator dependency

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
 
 			<dependency>
 				<groupId>org.jpmml</groupId>
+				<artifactId>pmml-evaluator-testing</artifactId>
+				<version>1.6.0</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.jpmml</groupId>
 				<artifactId>pmml-model</artifactId>
 				<version>1.6.0</version>
 			</dependency>
@@ -104,17 +110,17 @@
 			</dependency>
 
 			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.13.2</version>
-				<scope>test</scope>
-			</dependency>
-
-			<dependency>
 				<groupId>org.jpmml</groupId>
 				<artifactId>pmml-model</artifactId>
 				<version>1.6.0</version>
 				<classifier>tests</classifier>
+				<scope>test</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.13.2</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
