Improved commit df8a3d1330

--- a/pmml-converter-testing/pom.xml
+++ b/pmml-converter-testing/pom.xml
@@ -10,6 +10,7 @@
 
 	<groupId>org.jpmml</groupId>
 	<artifactId>pmml-converter-testing</artifactId>
+	<packaging>jar</packaging>
 
 	<name>JPMML converter batch testing harness</name>
 	<description>JPMML class model converter batch testing harness</description>
