--- a/pmml-converter-testing/pom.xml
+++ b/pmml-converter-testing/pom.xml
@@ -36,6 +36,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>failureaccess</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
