--- a/pom.xml
+++ b/pom.xml
@@ -99,13 +99,20 @@
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
-				<version>33.0.0-jre</version>
+				<version>33.2.1-jre</version>
 				<exclusions>
 					<exclusion>
 						<groupId>*</groupId>
 						<artifactId>*</artifactId>
 					</exclusion>
 				</exclusions>
+			</dependency>
+
+			<!-- Inherited from the com.google.guava:guava dependency -->
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>failureaccess</artifactId>
+				<version>1.0.2</version>
 			</dependency>
 
 			<dependency>
