--- a/pmml-converter/pom.xml
+++ b/pmml-converter/pom.xml
@@ -34,6 +34,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.beust</groupId>
+			<artifactId>jcommander</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 		</dependency>
