--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
 			</dependency>
 
 			<dependency>
+				<groupId>com.beust</groupId>
+				<artifactId>jcommander</artifactId>
+				<version>1.72</version>
+			</dependency>
+
+			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
 				<version>33.3.1-jre</version>
