--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>org.jpmml</groupId>
 	<artifactId>jpmml-converter</artifactId>
-	<version>1.5-SNAPSHOT</version>
+	<version>1.5.9</version>
 	<packaging>pom</packaging>
 
 	<name>JPMML-Converter</name>
@@ -41,7 +41,7 @@
 		<connection>scm:git:git@github.com:jpmml/jpmml-converter.git</connection>
 		<developerConnection>scm:git:git@github.com:jpmml/jpmml-converter.git</developerConnection>
 		<url>git://github.com/jpmml/jpmml-converter.git</url>
-		<tag>HEAD</tag>
+		<tag>1.5.9</tag>
 	</scm>
 	<issueManagement>
 		<system>GitHub</system>
@@ -49,7 +49,7 @@
 	</issueManagement>
 
 	<properties>
-		<project.build.outputTimestamp>2024-10-27T14:14:01Z</project.build.outputTimestamp>
+		<project.build.outputTimestamp>2024-11-25T18:51:22Z</project.build.outputTimestamp>
 	</properties>
 
 	<dependencyManagement>
@@ -57,12 +57,12 @@
 			<dependency>
 				<groupId>org.jpmml</groupId>
 				<artifactId>pmml-converter</artifactId>
-				<version>1.5-SNAPSHOT</version>
+				<version>1.5.9</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jpmml</groupId>
 				<artifactId>pmml-converter-testing</artifactId>
-				<version>1.5-SNAPSHOT</version>
+				<version>1.5.9</version>
 			</dependency>
 
 			<dependency>
