--- a/pmml-converter/pom.xml
+++ b/pmml-converter/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.jpmml</groupId>
 		<artifactId>jpmml-converter</artifactId>
-		<version>1.5.11</version>
+		<version>1.5-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.jpmml</groupId>
