--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
 	</issueManagement>
 
 	<properties>
+		<jdk.version>11</jdk.version>
 		<project.build.outputTimestamp>2025-01-10T17:07:54Z</project.build.outputTimestamp>
 	</properties>
 
@@ -150,8 +151,8 @@
 				<configuration>
 					<showDeprecation>true</showDeprecation>
 					<showWarnings>true</showWarnings>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -166,6 +167,9 @@
 						</goals>
 						<configuration>
 							<rules>
+								<requireJavaVersion>
+									<version>[11,)</version>
+								</requireJavaVersion>
 								<requireMavenVersion>
 									<version>3.6.3</version>
 								</requireMavenVersion>
@@ -179,7 +183,7 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.10.1</version>
 				<configuration>
-					<javadocVersion>1.8</javadocVersion>
+					<release>${jdk.version}</release>
 				</configuration>
 			</plugin>
 			<plugin>
