--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,8 @@
 
 	<properties>
 		<jdk.version>11</jdk.version>
+		<jpmml-model.version>1.6.11</jpmml-model.version>
+		<jpmml-evaluator.version>1.6.11</jpmml-evaluator.version>
 		<project.build.outputTimestamp>2025-01-10T17:07:54Z</project.build.outputTimestamp>
 	</properties>
 
@@ -69,18 +71,18 @@
 			<dependency>
 				<groupId>org.jpmml</groupId>
 				<artifactId>pmml-evaluator-testing</artifactId>
-				<version>1.6.11</version>
+				<version>${jpmml-evaluator.version}</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.jpmml</groupId>
 				<artifactId>pmml-model</artifactId>
-				<version>1.6.11</version>
+				<version>${jpmml-model.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jpmml</groupId>
 				<artifactId>pmml-model-metro</artifactId>
-				<version>1.6.11</version>
+				<version>${jpmml-model.version}</version>
 				<exclusions>
 					<exclusion>
 						<groupId>org.glassfish.jaxb</groupId>
@@ -128,7 +130,7 @@
 			<dependency>
 				<groupId>org.jpmml</groupId>
 				<artifactId>pmml-model</artifactId>
-				<version>1.6.11</version>
+				<version>${jpmml-model.version}</version>
 				<classifier>tests</classifier>
 				<scope>test</scope>
 			</dependency>
@@ -181,7 +183,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.10.1</version>
+				<version>3.11.2</version>
 				<configuration>
 					<release>${jdk.version}</release>
 				</configuration>
@@ -204,7 +206,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.5.0</version>
+				<version>3.5.2</version>
 				<configuration>
 					<argLine>${jacoco.agent}</argLine>
 					<trimStackTrace>false</trimStackTrace>
