--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>org.jpmml</groupId>
 	<artifactId>jpmml-converter</artifactId>
-	<version>1.6.0</version>
+	<version>1.6-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>JPMML-Converter</name>
@@ -41,7 +41,7 @@
 		<connection>scm:git:git@github.com:jpmml/jpmml-converter.git</connection>
 		<developerConnection>scm:git:git@github.com:jpmml/jpmml-converter.git</developerConnection>
 		<url>git://github.com/jpmml/jpmml-converter.git</url>
-		<tag>1.6.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<issueManagement>
 		<system>GitHub</system>
@@ -52,7 +52,7 @@
 		<jdk.version>11</jdk.version>
 		<jpmml-model.version>1.7.1</jpmml-model.version>
 		<jpmml-evaluator.version>1.7.1</jpmml-evaluator.version>
-		<project.build.outputTimestamp>2025-02-02T11:20:10Z</project.build.outputTimestamp>
+		<project.build.outputTimestamp>2025-02-02T11:20:33Z</project.build.outputTimestamp>
 	</properties>
 
 	<dependencyManagement>
@@ -60,12 +60,12 @@
 			<dependency>
 				<groupId>org.jpmml</groupId>
 				<artifactId>pmml-converter</artifactId>
-				<version>1.6.0</version>
+				<version>1.6-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jpmml</groupId>
 				<artifactId>pmml-converter-testing</artifactId>
-				<version>1.6.0</version>
+				<version>1.6-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
